added example in state monad haskell file, included code fragments in realtedconcepts

--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -71,10 +71,28 @@ Often this function itself is called the algebra, hence my use of the name alg i
 
 \begin{code-list}[th]
   \begin{singlespace}
-    \inputminted[linenos, firstline=160, lastline=213]{haskell}{haskell-monad-working.hs}
+    \inputminted[linenos, firstline=160, lastline=169]{haskell}{haskell-monad-working.hs}
   \end{singlespace}
-  \caption{Haskell Monad Working}
-\label{tab:hskllmndworkng}
+  \caption{Haskell Monad Working: Data Types}
+\label{tab:hskllmndworkngdatatype}
+\end{code-list}
+
+
+
+\begin{code-list}[th]
+  \begin{singlespace}
+    \inputminted[linenos, firstline=171, lastline=218]{haskell}{haskell-monad-working.hs}
+  \end{singlespace}
+  \caption{Haskell Monad Working: Functions}
+\label{tab:hskllmndworkngfunctions}
+\end{code-list}
+
+\begin{code-list}[th]
+  \begin{singlespace}
+    \inputminted[linenos, firstline=223, lastline=247]{haskell}{haskell-monad-working.hs}
+  \end{singlespace}
+  \caption{Haskell Monad Working: Examples}
+\label{tab:hskllmndworkngexamples}
 \end{code-list}
 
 
