--- a/pwp.tex
+++ b/pwp.tex
@@ -22,12 +22,17 @@ This chapter discusses the properties of the target language \progLang{Prolog} a
 language to extend its capabilities.
 
 \begin{enumerate}
-\item Why a Logic Programming Languagee\eref{caps-choices} ?
+\item Why a logic programming language\eref{caps-choices} ?
+Our base language; \progLang{Haskell} is from the same paradigm. 
+
+It would be interesting to see how two languages of the same family with conflicting features can be made to work together.
+
+
 
 \item \progLang{Prolog} as a logic programming language.
 
 \progLang{Prolog} is a general purpose logic programming language mainly used in artificial intelligence and computational linguistics.  
-It is a Declarative\eref{caps-choices} language i.e. a program is a set of facts an rules running a query on which will return a result. The relation
+It is a declarative\eref{caps-choices} language i.e. a program is a set of facts an rules running a query on which will return a result. The relation
 between them is defined by clauses using \textit{Horn Clauses}\cite{wikiprolog}. \progLang{Prolog} is very popular and has a number of 
 implementations \cite{website:comparisonofprologimplementationswiki} for different purposes. 
 
@@ -48,26 +53,18 @@ improve upon giving a starting point.
 \item Simple Syntax
 \cite{wikiprolog}
 
-Prolog is dynamically typed. It has a single data type, the term, which has several subtypes: atoms, numbers, variables and compound terms.
+Dynamically singly typed encapsulating atoms, numbers, variables and compound terms.
 
-An atom is a general-purpose name with no inherent meaning. It is composed of a sequence of characters that is parsed by the Prolog\endnote{%
-  Use \macroName{progLang}!
-}
-reader 
-as a single unit.
+Atoms : A string of characters made up of upper-case letters, lower-case letters, digits, and the underscore character, that begins with a 
+lower-case letter.
 
-Numbers can be floats or integers. Many Prolog\endnote{%
-  Use \macroName{progLang}!
-}
- implementations also provide unbounded integers and rational numbers.
+Variable : A variable is a string of upper-case letters, lower-case letters, digits and underscore characters that starts either with an upper-case letter or with an underscore.
 
-Variables are denoted by a string consisting of letters, numbers and underscore characters, and beginning with an upper-case letter or 
-underscore. Variables closely resemble variables in logic in that they are placeholders for arbitrary terms. A variable can become 
-instantiated (bound to equal a specific term) via unification.
+Compound Term : Complex terms are build out of a functor followed by a sequence of arguments. The arguments are put in ordinary 
+parentheses, separated by commas, and placed after the functor. Note that the functor has to be directly followed by the parenthesis; you 
+can’t have a space between the functor and the parenthesis enclosing the arguments. The functor must be an atom. That is, variables cannot 
+be used as functors. On the other hand, arguments can be any kind of term.
 
-A compound term is composed of an atom called a ``functor'' and a number of ``arguments'', which are again terms. Compound terms are ordinarily 
-written as a functor followed by a comma-separated list of argument terms, which is contained in parentheses. The number of arguments is 
-called the term's arity. An atom can be regarded as a compound term with arity zero.
 
 Prolog programs describe relations, defined by means of clauses. Pure Prolog is restricted to Horn clauses, a Turing-complete subset of 
 first-order predicate logic. There are two types of clauses: Facts and rules.
@@ -75,7 +72,7 @@ first-order predicate logic. There are two types of clauses: Facts and rules.
 
 
 \cite{website:prologintroumiami}
-In Prolog\endnote{%
+In \progLang{Prolog}\endnote{%
   Use \macroName{progLang}!
 }
  all data objects are called terms
@@ -134,11 +131,11 @@ Variables in Prolog are rather different to those in most other languages. Furth
 \item Simple Semantics
 
 Under a declarative reading, the order of rules, and of goals within rules, is irrelevant since logical disjunction and conjunction are 
-commutative. Procedurally, however, it is often important to take into account Prolog's\endnote{%
+commutative. Procedurally, however, it is often important to take into account \progLang{Prolog}'s\endnote{%
   Use \macroName{progLang}!
 }
  execution strategy, either for efficiency reasons, 
-or due to the semantics of impure built-in predicates for which the order of evaluation matters. Also, as Prolog\endnote{%
+or due to the semantics of impure built-in predicates for which the order of evaluation matters. Also, as \progLang{Prolog}\endnote{%
   Use \macroName{progLang}!
 }
  interpreters try to unify 
