Added prototype 1 architecture figure.

--- a/proto1.tex
+++ b/proto1.tex
@@ -248,6 +248,12 @@ In this prototype we explore the unification aspect only.\endnote{%
 
 In this prototype we explore the unification aspect only.
 
+\begin{figure}
+  \includegraphics[width=1\textwidth]{Prototype-1.pdf}
+  \caption{Architecture of Prototype 1}
+  \label{fig:proto1-arch}
+\end{figure}
+
 \section{What we do in this Prototype}
 This prototype throws light on the process of tackling the issues involved in creating
 a data type to replicate the target language type system while conforming to the host language restrictions and also utilizing the
