--- a/proto2.tex
+++ b/proto2.tex
@@ -271,12 +271,27 @@ Listing~\ref{tab:prlg0201monadicunificationtranslation}.
 
 \begin{code-list}[th]
   \begin{singlespace}
-    \inputminted[linenos]{haskell}{haskell-proto2-monadic-unification-tests-and-extraction.hs}
+    \inputminted[linenos,lastline=30]{haskell}{haskell-proto2-monadic-unification-tests-and-extraction.hs}
   \end{singlespace}
-\caption{prolog-0.2.0.1 Monadic Unification Tests and Extraction}
-\label{tab:prlg0201monadicunificationtestsandextraction}
+\caption{prolog-0.2.0.1 Monadic Unification Tests and Extraction 1}
+\label{tab:prlg0201monadicunificationtestsandextraction1}
 \end{code-list}
 
+\begin{code-list}[th]
+  \begin{singlespace}
+    \inputminted[linenos,firstline=32]{haskell}{haskell-proto2-monadic-unification-tests-and-extraction.hs}
+  \end{singlespace}
+\caption{prolog-0.2.0.1 Monadic Unification Tests and Extraction 2}
+\label{tab:prlg0201monadicunificationtestsandextraction2}
+\end{code-list}
+
+\begin{code-list}[th]
+  \begin{singlespace}
+    \inputminted[linenos,firstline=96]{haskell}{haskell-proto2-monadic-unification-tests-and-extraction.hs}
+  \end{singlespace}
+\caption{prolog-0.2.0.1 Monadic Unification Tests and Extraction 3}
+\label{tab:prlg0201monadicunificationtestsandextraction2}
+\end{code-list}
 
 
 \begin{comment}
@@ -284,6 +299,7 @@ Listing~\ref{tab:prlg0201monadicunificationtranslation}.
 The resulting language is not far from what we did in {\Large ?\LARGE ?}~\ref{proto1}\endnote{%
   Fix me!
 }
+%% dgc 2016-01-16 Above TODO
 apart from the fact that the \markWord{Term} expressions are encapsulated to form \markWord{Clauses} which in turn
 form a \markWord{Program}.
 
