Added toDo lines

--- a/proto2.tex
+++ b/proto2.tex
@@ -73,6 +73,7 @@ Figure~\ref{fig:A language-processing system}).
 \end{figure}
 
 specifically speaking, parts of a compiler (see Figure~\ref{fig:Phases of Compiler}).
+%% 2016-01-16 dgc TODO the above needs to be fixed.
 
 \begin{figure}[th]
 \centering
@@ -298,6 +299,7 @@ Listing~\ref{tab:prlg0201monadicunificationtranslation}.
 The resulting language is not far from what we did in {\Large ?\LARGE ?}~\ref{proto1}\endnote{%
   Fix me!
 }
+%% dgc 2016-01-16 Above TODO
 apart from the fact that the \markWord{Term} expressions are encapsulated to form \markWord{Clauses} which in turn
 form a \markWord{Program}.
 
