--- a/results.tex
+++ b/results.tex
@@ -168,6 +168,7 @@ data Result = Ordinary ____________ --No I/O required
 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+%% TODO 2016-01-16.  remove the embedded space in the title.
 \section{ Monads}
 
 
