--- a/proto2.tex
+++ b/proto2.tex
@@ -73,6 +73,7 @@ Figure~\ref{fig:A language-processing system}).
 \end{figure}
 
 specifically speaking, parts of a compiler (see Figure~\ref{fig:Phases of Compiler}).
+%% 2016-01-16 dgc TODO the above needs to be fixed.
 
 \begin{figure}[th]
 \centering
