partial simplification of state monad example.

--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -69,6 +69,37 @@ Often this function itself is called the algebra, hence my use of the name alg i
 \section{Monads by example: The State Monad}
 
 
+\begin{code-list}[th]
+  \begin{singlespace}
+    \inputminted[linenos, firstline=16, lastline=33]{haskell}{haskell-monad-working-2.hs}
+  \end{singlespace}
+  \caption{Haskell Monad Working: Data Types}
+\label{tab:hskllmndworkngdatatype}
+\end{code-list}
+
+\begin{code-list}[th]
+  \begin{singlespace}
+    \inputminted[linenos, firstline=35, lastline=65]{haskell}{haskell-monad-working-2.hs}
+  \end{singlespace}
+  \caption{Haskell Monad Working: Functions 1}
+\label{tab:hskllmndworkngfunctions}
+\end{code-list}
+
+\begin{code-list}[th]
+  \begin{singlespace}
+    \inputminted[linenos, firstline=60, lastline=94]{haskell}{haskell-monad-working-2.hs}
+  \end{singlespace}
+  \caption{Haskell Monad Working: Functions 2}
+\label{tab:hskllmndworkngfunctions}
+\end{code-list}
+
+\begin{code-list}[th]
+  \begin{singlespace}
+    \inputminted[linenos, firstline=97, lastline=123]{haskell}{haskell-monad-working-2.hs}
+  \end{singlespace}
+  \caption{Haskell Monad Working: Examples}
+\label{tab:hskllmndworkngexamples}
+\end{code-list}
 
 
 \section{Chapter Recapitulation}
