--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -71,25 +71,31 @@ Often this function itself is called the algebra, hence my use of the name alg i
 
 \begin{code-list}[th]
   \begin{singlespace}
-    \inputminted[linenos, firstline=160, lastline=169]{haskell}{haskell-monad-working.hs}
+    \inputminted[linenos, firstline=16, lastline=33]{haskell}{haskell-monad-working-2.hs}
   \end{singlespace}
   \caption{Haskell Monad Working: Data Types}
 \label{tab:hskllmndworkngdatatype}
 \end{code-list}
 
-
-
 \begin{code-list}[th]
   \begin{singlespace}
-    \inputminted[linenos, firstline=171, lastline=218]{haskell}{haskell-monad-working.hs}
+    \inputminted[linenos, firstline=35, lastline=65]{haskell}{haskell-monad-working-2.hs}
   \end{singlespace}
-  \caption{Haskell Monad Working: Functions}
+  \caption{Haskell Monad Working: Functions 1}
 \label{tab:hskllmndworkngfunctions}
 \end{code-list}
 
 \begin{code-list}[th]
   \begin{singlespace}
-    \inputminted[linenos, firstline=223, lastline=247]{haskell}{haskell-monad-working.hs}
+    \inputminted[linenos, firstline=60, lastline=94]{haskell}{haskell-monad-working-2.hs}
+  \end{singlespace}
+  \caption{Haskell Monad Working: Functions 2}
+\label{tab:hskllmndworkngfunctions}
+\end{code-list}
+
+\begin{code-list}[th]
+  \begin{singlespace}
+    \inputminted[linenos, firstline=97, lastline=123]{haskell}{haskell-monad-working-2.hs}
   \end{singlespace}
   \caption{Haskell Monad Working: Examples}
 \label{tab:hskllmndworkngexamples}
