--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -83,6 +83,11 @@
 \newcommand{\prologConstruct}[1]{\textcolor{brown}{\texttt{#1}}}
 \newcommand{\haskellConstruct}[1]{\textcolor{magenta}{\texttt{#1}}}
 \newcommand{\languageConstruct}[1]{\textcolor{orange}{\texttt{#1}}}
+
+\providecommand\codeLibrary[1]{\texttt{\bfseries #1}}
+\providecommand\metaSyntacticVariable[1]{\textsl{\ttfamily #1}}
+\providecommand\mSV{\metaSyntacticVariable}
+
 % This is needed to include figures
 % \usepackage{graphicx}
 
