Removed the "Improved Contributions" section of accomplishedWork.tex . Added sections "Conceptual Advances", "What the prototypes contain"

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -136,6 +136,10 @@ Taking into consideration the above, there is quite some room for improvement an
   Try completely rephrasing this sentence.
 }
 
+\section{Things that this thesis fixes}\label{sec:things-fixed}
+
+\david{Here is a discussion of problems mentioned above that this thesis
+tackles}
 
 \section{Chapter Recapitulation}
 
