--- a/accomplishedWork.tex
+++ b/accomplishedWork.tex
@@ -10,9 +10,13 @@
 \chapter{Accomplished Work}\label{chap:accomplishedWork}
 %-----------------------------------------------------------------------------
 
-\section{Improved Contributions}
-\begin{enumerate}
-\item
+\section{What this chapter is about}\label{sec:what-this-chapter:accomplishedWork}
+
+\section{Conceptual Advances beyond Section~\ref{sec:things-fixed}}\label{sec:what-this-chapter:accomplishedWork}
+
+\section{What the prototypes contain}
+\subsection{What Prototype 1 contains}
+
   Most languages have a recursive abstract syntax which restricts the eDSL\endnote{%
     Have we defined ``eDSL'' yet?  If not, write
     ``\textsl{embedded, domain-specific language \enparen{eDSL}}''.
@@ -28,7 +32,9 @@
   As for the unification part we use \cite{unification-fd-lib}, which provides a generic unification algorithm
   implementation encapsulated into a monad.
 
-\item
+
+\subsection{What Prototype 2 contains}
+
   (\chapterReference{proto2.1}{Prototype 2}) does the what a \progLang{Prolog} query resolver would do given a
   query and a knowledge base.
   The mechanism for the same is adopted from \cite{prolog-lib}.
@@ -37,17 +43,17 @@
   other components.
   Lastly the result is converted into the original language via a translate function.
 
-\item
+\subsection{What Prototype 3 contains}
+
   (\chapterReference{proto3}{Prototype 3}) demonstrates the modularity of the unification process of the query
   resolver with multiple search strategies.
 
-\item
+\subsection{What Prototype 4 contains}
+
   (\chapterReference{proto4}{Prototype 4}) throws light on how IO operations can be embedded into the abstract
   syntax of a DSL which when interpreted would produce output consisting of a pure set of instructions irrespective
   of the nature of the construct.
   The effects are only produced only when the actions are executed.
-\end{enumerate}
-
 
 
 \section{Thesis Improved Contributions}
