Added toDo lines.

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -13,6 +13,7 @@
 \textcolor{blue}{\textsl{I suspect that the title of this chapter needs to change.}}
 
 \section{What this chapter is about}\label{sec:what-this-chapter:proposedWork}
+%% 2016-01-16.  dgc.  Perhaps we should change the label above? TODO
 
 \textcolor{blue}{\textsl{I need this information.
     I do not know what you are trying to do here.
