--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -7,7 +7,7 @@
 \begin{document}
 
 %-----------------------------------------------------------------------------
-\chapter{Current and Accomplished Work}\label{chap:proposedWork}
+\chapter{Current}\label{chap:proposedWork}
 %-----------------------------------------------------------------------------
 
 \textcolor{blue}{\textsl{I suspect that the title of this chapter needs to change.}}
