Fixes from mehul to    embedding.tex    multiparadigm.tex    proto1.tex    pwp.tex    relatedWork.tex

--- a/embedding.tex
+++ b/embedding.tex
@@ -1,4 +1,3 @@
-
 \documentclass[thesis-solanki.tex]{subfiles}
 
 \ifMain
@@ -76,7 +75,7 @@ The purely declarative nature lacks basic requirements such as support for \lang
   declarative; or \dots?
 }
 The other issue is the ongoing comparison between the siblings \cite{website:haskell-choice} of the same family, the
-family of leclarative languages.\eref{caps-choices}\textsuperscript{,}\endnote{%
+family of declarative languages.\eref{caps-choices}\textsuperscript{,}\endnote{%
   \david{What does this sentence mean?
   Are you suggesting that one of \progLang{Prolog}'s problems is that it is
   competing with \progLang{Haskell}?
