--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -56,8 +56,9 @@ different feature sets which are not naturally native to the language itself can
 The definitions of multi paradigm languages across the web
 \cite{website:wikimultiparadigm,website:mdn,website:blogc2} converge to roughly the same thing that of providing a
 framework to work with different styles with a list of languages \cite{website:wikimpllist,website:dmoz} that suffices the requirements.\endnote{%
-    Yet another metaphor that doesn't spin my wheels.
-    \mehul{changed}
+    Yet another metaphor that doesn't spin my wheels.\newline
+    \mehul{changed}\newline
+    \david{Now I just do not understand.}
 }
 Generally speaking, this\endnote{%
     What is ``it'' here?
@@ -67,8 +68,9 @@ is not very popular in programming circles; one reason could be that it\endnote{
   What is ``it'' here?  Is this the same ``it'' as above?
 }
 is a very broad topic and specifying details can clear the confusion.\endnote{%
-    Which fog?
-	\mehul{changed}
+    Which fog?\newline
+    \mehul{changed}\newline
+    \david{\dots Which confusion?}
 }
 
 \subsection{Functional Logic Programming Languages}
